force-app/main/default/objects/SmartVideoSetting__mdt/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <defaultValue>&quot;-&quot;</defaultValue>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>