force-app/main/default/objects/SmartVideoSetting__mdt/fields/environment__c.field-meta.xml
<CustomField>
    <fullName>environment__c</fullName>
    <defaultValue>&quot;generic&quot;</defaultValue>
    <label>Environment</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>