force-app/main/default/objects/SmartVideoSetting__mdt/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <defaultValue>&quot;POC&quot;</defaultValue>
    <label>External ID</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>