force-app/main/default/objects/SmartVideoSetting__mdt/fields/use_custom_permissions__c.field-meta.xml
<CustomField>
    <fullName>use_custom_permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Custom Permissions</label>
    <type>Checkbox</type>
</CustomField>